@@ -1,5 +1,11 @@
 2008-02-08  Neal H. Walfield  <neal@gnu.org>
 
+	* server.c (DEBUG): Print the caller's thread id.
+	(server_loop): When using DEBUG, don't include the caller's thread
+	id.
+
+2008-02-08  Neal H. Walfield  <neal@gnu.org>
+
 	* thread.c (thread_init): Update use of
 	hurd_ihash_init_with_buffer to be consistent with new API.
 	* object.c (object_init): Likewise.
